Added FIR filtering and moving window data storage in separate process

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,21 @@
             android:name=".DataCollectorService"
             android:exported="false"/>
 
-        <receiver android:name="com.example.schwusch.iotap_app.MainActivity$ResponseReceiver" android:enabled="true">
+        <receiver android:name="com.example.schwusch.iotap_app.MainActivity$ResponseReceiver"
+            android:enabled="true">
             <intent-filter>
-                <action android:name="IOTAP" />
+                <action android:name="IOTAP_GUI" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".GestureDetectorService"
+            android:exported="false"/>
+
+        <receiver android:name="com.example.schwusch.iotap_app.GestureDetectorService$ResponseReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="IOTAP_GD" />
             </intent-filter>
         </receiver>
 
