--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -32,6 +34,8 @@
             android:enabled="true">
             <intent-filter>
                 <action android:name="IOTAP_GUI" />
+                <action android:name="IOTAP_BT_FAIL" />
+                <action android:name="IOTAP_BT_SUCCESS" />
             </intent-filter>
         </receiver>
 
