--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
     testCompile 'junit:junit:4.12'
-    compile files('libs/wekaSTRIPPED.jar')
+    compile files('libs/weka.jar')
 }
